# pySSA

./: Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
pySSA/: Computer.py  Logger.py  SSA.py  __init__.py
pySSA/Algorithms/: SVD.py  randomSVD.py
pySSA/models/: Config.py  TimeSeries.py
tests/: test_SSA.py  test_TimeSeries.py  test_config.py
